--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -11,12 +11,18 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: build and push
-        uses: docker/build-push-action@v1.1.0
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
         with:
           username: luccasbeltrame
-          password: ${{secrets.DOCKER_PASSWORDS}}
-          repository: luccasbeltrame/go
-          tags: ${{env.GITHUB_SHA}}, latest
+          password: ${{ secrets.DOCKER_PASSWORDS }}
+        
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: luccasbeltrame/go:${{github.sha}}
 
        
