--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -28,6 +28,7 @@ jobs:
   deploy:
     name: "Deploy"
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: checkout
         uses: actions/checkout@master
