--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -23,7 +23,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: luccasbeltrame/go:${{github.sha}}
+          tags: luccasbeltrame/go:${GITHUB_SHA}
 
   deploy:
     name: "Deploy"
@@ -34,24 +34,12 @@ jobs:
         uses: actions/checkout@master
 
       - name: kustomize
-        uses: karancode/kustomize-github-action@master
-        with:
-          kustomize_version: v4.5.5
-          kustomize_build_dir: 'k8s'
-
-      - name: update k8s
-        run: |
-          kustomize edit set image goapp=luccasbeltrame/go:${{github.sha}}
-          cat kustomization.yaml
-
-      - name: commit
-        run: | 
-          git config --local user.email "action@github.com"
-          git config --local user.name "Deploy Action"
-          git commit -am "change image tag"
-      - name: push
-        uses: ad-m/github-push-action@master 
-
+      - uses: imranismail/setup-kustomize@v1
+      - run: |
+          kustomize edit set image goapp=luccasbeltrame/go:${GITHUB_SHA}
+          git add .
+          git commit -m "Set `app` image tag to `${GITHUB_SHA}`"
+          git push
 
 
        
