--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -31,12 +31,12 @@ jobs:
     needs: build
     steps:
       - uses: imranismail/setup-kustomize@v1
-      - uses: 'k8s'
       - run: |
           kustomize edit set image goapp=luccasbeltrame/go:${GITHUB_SHA}
           git add .
           git commit -m "Set `app` image tag to `${GITHUB_SHA}`"
           git push
+        working-directory: k8s  
 
 
 
