--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -32,9 +32,9 @@ jobs:
     steps:
       - uses: imranismail/setup-kustomize@v1
       - run: |
-          kustomize edit set image goapp=luccasbeltrame/go:${GITHUB_SHA}
+          kustomize edit set image goapp=luccasbeltrame/go:${{github.sha}}
           git add .
-          git commit -m "Set `app` image tag to `${GITHUB_SHA}`"
+          git commit -m "Set `app` image tag to `${{github.sha}}`"
           git push
         working-directory: k8s  
 
