--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -30,13 +30,16 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: checkout
+        uses: actions/checkout@v2
+
       - uses: imranismail/setup-kustomize@v1
       - run: |
           kustomize edit set image goapp=luccasbeltrame/go:${{github.sha}}
           git add .
           git commit -m "Set `app` image tag to `${{github.sha}}`"
           git push
-        working-directory: ./k8s  
+        working-directory: k8s  
 
 
 
