--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -37,7 +37,7 @@ jobs:
       - run: |
           kustomize edit set image goapp=luccasbeltrame/go:${{github.sha}}
           git add .
-          git commit -m "Set `app` image tag to `${{github.sha}}`"
+          git commit -m "Change image tag to `${{github.sha}}`"
           git push
         working-directory: k8s  
 
