--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -33,14 +33,20 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-      - uses: imranismail/setup-kustomize@v1
-      - run: |
+      - name: Kustomize RUN 
+        uses: imranismail/setup-kustomize@v1
+        run: |
           kustomize edit set image goapp=luccasbeltrame/go:${{github.sha}}
-          git add .
-          git commit -m "Change image tag to `${{github.sha}}`"
-          git push
         working-directory: k8s  
 
+      - name: commit
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "Deploy Action"
+          git commit -am "Change image tag to `${{github.sha}}`"
+
+      - name: push    
+        uses: ad-m/github-push-action@master
 
 
 
