--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -33,9 +33,8 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
-      - name: Kustomize RUN 
-        uses: imranismail/setup-kustomize@v1
-        run: |
+      - uses: imranismail/setup-kustomize@v1
+      - run: |
           kustomize edit set image goapp=luccasbeltrame/go:${{github.sha}}
         working-directory: k8s  
 
